--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,10 @@
 
 // Layout
 @import "layout/_general";
+@import "layout/_buttons";
+@import "layout/_date";
+@import "layout/_title";
+@import "layout/_social";
 
 // Page styles
 @import "modules/_header";
