--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,12 @@
 //fonts
 $dosis: 'Dosis', sans-serif;
+$openSans: 'Open Sans', sans-serif;
+
+//Colors
+$grey: #798285;
+$hover: #62a2ad;
 
 //For media
 $mobile-portrait: 480px;
 $mobile: 767px;
-$desctop: 1024px;
+$desktop: 1024px;
