--- a/scss/base/mixins/_custom.scss
+++ b/scss/base/mixins/_custom.scss
@@ -8,3 +8,13 @@
     opacity: .5;
     @if $color {background: $color;};
 }
+
+@mixin bg($bg-mobile, $bg-desktop) {
+    background: url('../images/#{$bg-mobile}') no-repeat bottom center;
+    background-size: contain;
+
+    @media (min-width: $desktop) {
+        background-image: url('../images/#{$bg-desktop}');
+        background-size: auto;
+    }
+}
