--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -32,3 +32,7 @@ body, html {
 
 @import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,700&display=swap');
 
+body {
+	font: 14px, $openSans;
+	color: $grey;
+}
