--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -23,7 +23,7 @@
         padding: 10px;
         transition: .3s;
 
-        @media (min-width: $desctop) {
+        @media (min-width: $desktop) {
             display: none;
         }
     }
@@ -63,7 +63,7 @@
     display: flex;
     justify-content: center;
 
-    @media (max-width: $desctop) {
+    @media (max-width: $desktop) {
         @include pos (fixed, $z: 1, $t: 0, $r: -250px);
         @include size(250px, 100%);
         background: rgba(255,255,255,.9);
@@ -76,6 +76,7 @@
         text-transform: uppercase;
         margin: 0 20px;
         text-align: center;
+        font: 17px $dosis;
     }
 
     &__link {
@@ -86,7 +87,7 @@
         display: inline-block;
         transition: .3s;
 
-        @media (max-width: $desctop) {
+        @media (max-width: $desktop) {
             display: block;
             padding: 20px, 0;
             font-size: 18px;
@@ -99,7 +100,7 @@
         transition: .3s;
         content: '';
 
-        @media (max-width: $desctop) {
+        @media (max-width: $desktop) {
             display: none;
         }
     }
@@ -129,7 +130,7 @@
     display: block;
     position: relative;
     
-    @media (min-width: $desctop) {
+    @media (min-width: $desktop) {
         display: none;
     }
 
@@ -150,5 +151,33 @@
         content: '';
         transform-origin: 0 100%;
     }
+}
+    
+.scroll {
+    text-decoration: none;
+    color: #fff;
+    margin-top: 25px;
+    font-size: 35px;
+    position: relative;
+    top: 0;
+    left: 4px;
+    transition: .3s;
+    animation: scroll-arrow 1.5s ease-in-out infinite;
 
+    &:hover {
+        color: $hover;
+    }
+}
+
+
+@keyframes scroll-arrow {
+    0% {
+        top: 0;
+    }
+    50% {
+        top: 20px;
+    }
+    100% {
+        top: 0;
+    }
 }
