--- a/scss/layout/_social.scss
+++ b/scss/layout/_social.scss
@@ -10,6 +10,10 @@
         &:last-child {
             margin-right: 0;
         }
+                
+        &:hover {
+            color: $hover;
+        }
     }
 
     &__icon {
