--- a/css/styles.css
+++ b/css/styles.css
@@ -174,9 +174,7 @@ body {
 }
 .button-arrow:hover .button-arrow__icon {
   fill: currentColor;
-  animation-name: arrow-move;
-  animation-timing-function: ease-in-out;
-  animation-duration: 1.5s;
+  animation: arrow-move 1.5s ease-in-out;
 }
 
 @keyframes arrow-move {
